Fix unclosed tag

--- a/src/ui/error.html
+++ b/src/ui/error.html
@@ -21,7 +21,7 @@
             </p>
             <ul>
                 <li>KDE</li>
-                <li>Gnome
+                <li>Gnome</li>
                 <li>Pop Gnome</li>
                 <li>Mate</li>
                 <li>XFCE</li>
@@ -68,7 +68,7 @@
             </p>
             <ul>
                 <li>KDE</li>
-                <li>Gnome
+                <li>Gnome</li>
                 <li>Pop Gnome</li>
                 <li>Mate</li>
                 <li>XFCE</li>
