Fix Linux error message

--- a/src/ui/error.html
+++ b/src/ui/error.html
@@ -23,7 +23,7 @@
                 When Thunderbird is minimized, move it to the tray
             </blockquote>
             <p>
-                This option is not available in Linux clients, so Close To Tray can't use it.
+                This option is not available on Linux clients, so Close To Tray can't interact with the tray.
             </p>
             <p>
                 <button class="close">Close</button>
