--- a/src/ui/error.html
+++ b/src/ui/error.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Couldn't move Thunderbird to the tray - $extensionName</title>
+        <title>Couldn't move Thunderbird to the tray - Close to Tray</title>
 
         <link rel="stylesheet" href="error.css">
         <script src="error.js"></script>
     </head>
     <body>
         <div class="logo">
-            <img src="../img/256-transparent.png" alt="$extensionName">
+            <img src="../img/256-transparent.png" alt="Close to Tray">
             <h1>Couldn't move Thunderbird to the tray</h1>
         </div>
         <!-- beginNoBetterbird -->
         <section class="linuxUnsupported" hidden>
             <p>
-                $extensionName couldn't move your window to the tray because Thunderbird on Linux lacks tray support.
+                Close to Tray couldn't move your window to the tray because Thunderbird on Linux lacks tray support.
             </p>
             <p>
-                $extensionName only works if the following option is available in settings:
+                Close to Tray only works if the following option is available in settings:
             </p>
             <blockquote>
                 When Thunderbird is minimized, move it to the tray
             </blockquote>
             <p>
-                This option is not available on Linux clients, so $extensionName can't interact with the tray.
+                This option is not available on Linux clients, so Close to Tray can't interact with the tray.
             </p>
             <p>
                 <button class="close">Close</button>
@@ -33,7 +33,7 @@
         <!-- beginBetterbird -->
         <section class="noBetterbird" hidden>
             <p>
-                You are using a Betterbird-enabled version of $extensionName with vanilla Thunderbird.
+                You are using a Betterbird-enabled version of Close to Tray with vanilla Thunderbird.
                 You must download <a href="https://betterbird.eu">Betterbird</a>.
             </p>
             <p>
@@ -48,7 +48,7 @@
                 <li>XFCE</li>
             </ul>
             <p>
-                $extensionName works with Betterbird 102.15.1 or newer.
+                Close to Tray works with Betterbird 102.15.1 or newer.
             </p>
             <p>
                 <a href="https://betterbird.eu" class="button">Get Betterbird</a>
@@ -72,7 +72,7 @@
                 Your desktop environment is not supported.
             </p>
             <p class="noDesktopEnvironment" hidden>
-                $extensionName couldn't detect your desktop environment. This should not normally happen.
+                Close to Tray couldn't detect your desktop environment. This should not normally happen.
             </p>
             <p>
                 When moving a window to the tray, Betterbird checks your desktop environment against a list of supported environments.
